Use -webkit-fill-available for iOS bottom cutoff fix

--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -13,7 +13,8 @@ html {
 html, body {
   position: fixed;
   width: 100%;
-  height: 100dvh;
+  height: 100%;
+  height: -webkit-fill-available;
   overflow: hidden;
   overscroll-behavior: none;
   -webkit-tap-highlight-color: transparent;
